--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <link href="src/styles.css" rel="stylesheet" />
 
   <meta charset="utf-8">
-  <title>MyDreamApp</title>
+  <title>Angular2 & JSDO SPA</title>
   
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
